bugfix: wordwrap + twitter embed error

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
     font-size: 0.8rem;
+    overflow-wrap: break-word;
 }
 
 #map_container {
